tests/fixtures/invalid_semantic/undeclared_variable.st
FUNCTION bad : INT
VAR_INPUT
    input_value: INT;
END_VAR
    bad := input_value + missing_value;
END_FUNCTION
